Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5835

[C++ broker] Broker recovery forgets auto-delete flag on queues and exchanges

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.26
    • 0.29
    • C++ Broker
    • None

    Description

      Description of problem:
      When a durable node with auto-delete: true exists, the property is reset to false after broker restarts.

      Version-Release number of selected component (if applicable):
      (any)

      How reproducible:
      100%

      Steps to Reproduce:
      1. create durable node (queue) with auto-delete property set
      ./spout "autodelq;{'create':'always', 'node': {'x-declare':

      {'auto-delete': True}

      }}"

      2. create durable node (exchange) with auto-delete property set
      ./spout "autodelex;{'create':'always', 'node': {'type': topic, 'x-declare':

      {'auto-delete': True}

      , 'durable':True}}"

      3. check auto-delete flag
      qpid-stat -q #for queue, use e.g. qpid-tool for exchange

      4. restart broker
      5. check auto-delete flag

      Actual results:
      'autoDelete': False is on both nodes

      Expected results:
      autoDelete property should survive the restart

      Attachments

        Activity

          People

            pmoravec Pavel Moravec
            pmoravec Pavel Moravec
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: