QPID-5835: [C++ broker] Broker recovery forgets auto-delete flag on queues and exchanges

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1604455 13f79535-47bb-0310-9956-ffa450edef68